--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <h2>GCSE Theory</h2>
       <ul>
 
-          <li><a href="/site_pages/G-KO.html">Knowledge organisers</a></li>
-                    <li><a href="/site_pages/G-fast4.html">Knowledge organisers</a></li>
-          <li><a href="/site_pages/G-walkthroughs.html">Exam Walkthrough videos</a></li>
-        <li><a href="/site_pages/G-Jump123.html">JUMP activities</a></li>
-        <li><a href="/site_pages/G-terms.html">Printed Terms &amp; Definitions</a></li>
-        <li><a href="/site_pages/G-booklets.html">Revision booklets</a></li>
-        <li><a href="/site_pages/gcse/G-mats.html">Revision mats</a></li>
+          <li><a href="site_pages/G-KO.html">Knowledge organisers</a></li>
+          <li><a href="site_pages/G-fast4.html">Knowledge organisers</a></li>
+          <li><a href="site_pages/G-walkthrough.html">Exam Walkthrough videos</a></li>
+        <li><a href="site_pages/G-Jump123.html">JUMP activities</a></li>
+        <li><a href="site_pages/G-terms.html">Printed Terms &amp; Definitions</a></li>
+        <li><a href="site_pages/G-booklets.html">Revision booklets</a></li>
+        <li><a href="site_pages/gcse/G-mats.html">Revision mats</a></li>
           <li><a href="https://smartrevise.online/" target="_blank" rel="noopener noreferrer">Smart Revise</a></li>
 
       </ul>
@@ -27,8 +27,8 @@
     <section class="index-card">
       <h2>GCSE Programming</h2>
       <ul>
-        <li><a href="/site_pages/G-parsons.html">Parsons Puzzles (Trinket)</a></li>
-        <li><a href="/site_pages/G-fill.html">Fill-in-the-gaps coding (Trinket)</a></li>
+        <li><a href="site_pages/G-parsons.html">Parsons Puzzles (Trinket)</a></li>
+        <li><a href="site_pages/G-fill.html">Fill-in-the-gaps coding (Trinket)</a></li>
          <li><a href="https://edublocks.org/" target="_blank" rel="noopener noreferrer">Coding homework (Edublocks)</a></li>
   <li><a href="https://www.pythonsponge.com/" target="_blank" rel="noopener noreferrer">Python Sponge</a></li>
 
@@ -37,12 +37,12 @@
     <section class="index-card">
       <h2>A‑Level Study &amp; Revision</h2>
       <ul>
-          <li><a href="/site_pages/A-KO.html">Knowledge organisers</a></li>
-          <li><a href="/site_pages/A-Fast4.html">Fast Four</a></li>
-        <li><a href="/site_pages/A-booklets.html">Revision booklets</a></li>
-        <li><a href="/site_pages/A-terms.html">Key terms &amp; definitions</a></li>
-        <li><a href="/site_pages/A-mats.html">Revision mats</a></li>
-        <li><a href="/site_pages/A-walkthrough.html">Exam walkthroughs</a></li>
+          <li><a href="site_pages/A-KO.html">Knowledge organisers</a></li>
+          <li><a href="site_pages/A-Fast4.html">Fast Four</a></li>
+        <li><a href="site_pages/A-booklets.html">Revision booklets</a></li>
+        <li><a href="site_pages/A-terms.html">Key terms &amp; definitions</a></li>
+        <li><a href="site_pages/A-mats.html">Revision mats</a></li>
+        <li><a href="site_pages/A-walkthrough.html">Exam walkthroughs</a></li>
           <li><a href="https://smartrevise.online/" target="_blank" rel="noopener noreferrer">Smart Revise</a></li>
 
 
